fixing tablet navigation overflow

--- a/app/assets/scss/modules/_primary-nav.scss
+++ b/app/assets/scss/modules/_primary-nav.scss
@@ -5,11 +5,12 @@
 		display: block;
 
 		> a {
-			display: block;
+			display: inline-flex;
+			align-items: center;
 			padding: 0 10px;
 			height: 48px;
-			line-height: 48px;
-			transition: $transition;
+			// line-height: 48px;
+			transition: color $transition, background $transition;
 		}
 	}
 
