--- a/app/assets/scss/themes/_base.scss
+++ b/app/assets/scss/themes/_base.scss
@@ -268,3 +268,9 @@ fieldset {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+
+.site-industry {
+	flex-shrink: 0;
+	width: 148px;
+	margin-right: 8px;
+}
